Update html file

--- a/angel.html
+++ b/angel.html
@@ -1,10 +1,12 @@
 
 
-<h1>Angel Thompson</h1>
+<h1 align="center">Angel Thompson</h1>
     <p>Hello! My name is Angel Thompson. I work as a pharmacy technician currently at a hospital. I currently work on medication histories for patients. I have a Computer Science degree.</p>
     <p>I have a 5 year old amazing little girl who keeps me on my toes. We love to cook and bake together.</p>
 
-<img src="Angel.jpg">
+<img src="Angel.jpg"
+    width="#400"
+    height="500" />
 
 <h2>Hobbies</h2>
     <ol>
@@ -13,4 +15,3 @@
         <li>Spending time with family</li>
     </ol>
 
-    
